--- a/paddleocr-service/Dockerfile
+++ b/paddleocr-service/Dockerfile
@@ -1,14 +1,14 @@
-FROM python:3.10-slim
+FROM python:3.10-slim-bookworm
 
 WORKDIR /app
 
 # Install system dependencies for OpenCV, PDF processing
 RUN apt-get update && apt-get install -y \
-    libgl1 \
+    libgl1-mesa-glx \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
-    libxrender1 \
+    libxrender-dev \
     poppler-utils \
     && rm -rf /var/lib/apt/lists/*
 
