fix: Add libgomp1 for PaddlePaddle OpenMP support

--- a/paddleocr-service/Dockerfile
+++ b/paddleocr-service/Dockerfile
@@ -2,13 +2,14 @@ FROM python:3.10-slim-bookworm
 
 WORKDIR /app
 
-# Install system dependencies for OpenCV, PDF processing
+# Install system dependencies for OpenCV, PDF processing, PaddlePaddle
 RUN apt-get update && apt-get install -y \
     libgl1-mesa-glx \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
     libxrender-dev \
+    libgomp1 \
     poppler-utils \
     && rm -rf /var/lib/apt/lists/*
 
