--- a/paddleocr-service/requirements.txt
+++ b/paddleocr-service/requirements.txt
@@ -1,7 +1,7 @@
 fastapi>=0.109.0
 uvicorn>=0.27.0
-paddleocr>=2.9.0
-paddlepaddle>=2.6.0
+paddleocr==2.7.3
+paddlepaddle==2.5.2
 python-multipart>=0.0.6
 pdf2image>=1.17.0
 Pillow>=10.0.0
