feat(site-studio): add lovable-style admin page builder with visual edits

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "dev:convex": "convex dev",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:convex\"",
+    "site-publish:webhook": "node scripts/site_publish_webhook.mjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "golden-check": "node --import tsx/esm scripts/golden-check.mjs"
